Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ sudo apt-get install libfftw3-dev
 sudo apt-get install libcfitsio3-dev  
 sudo apt-get install git
 sudo apt-get install libleptonica-dev 
+sudo apt-get install tesseract-ocr
 sudo apt-get install wget
 sudo apt-get install libjpeg8-dev 
 sudo apt-get install libjpeg-dev
@@ -70,6 +71,8 @@ sudo apt-get install qt4-default
 ./configure --enable-scribo
 make
 </code></pre>
+
+<p>For Indic Script support please install models from <a href="https://indic-ocr.github.io/tessdata/">https://indic-ocr.github.io/tessdata/</a> </p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
