Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
+        <p><img src="https://indic-ocr.github.io/images/indicocr128.png" alt="Indic-OCR Logo"> </p>
+
+<h3>
 <a id="olena" class="anchor" href="#olena" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Olena</h3>
 
 <p>Indic OCR uses <a href="https://olena.lrde.epita.fr/">Scribo module of Olena</a> for layout analysis. </p>
